--- a/.github/workflows/publish-test-image.yml
+++ b/.github/workflows/publish-test-image.yml
@@ -13,6 +13,9 @@ jobs:
       id-token: write
 
     steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
+
       - name: Log into registry
         uses: docker/login-action@28218f9b04b4f3f62068d7b6ce6ca5b26e35336c
         with:
