--- a/.github/workflows/publish-test-image.yml
+++ b/.github/workflows/publish-test-image.yml
@@ -26,4 +26,4 @@ jobs:
         with:
           context: build
           push: true
-          tags: texm/dokku-preconfigured:latest
+          tags: texm/dokku-go:preconfigured-env
